# causal

./: .gitignore  Cargo.toml  Cargoxit.toml  README.md  assembly_optimizations.md  create-structure.sh  docker-compose.yml  justfile  rust-toolchain.toml
.github/workflows/: ci.yml
agent/collectors/: Cargo.toml
agent/collectors/src/: lib.rs  registry.rs
agent/collectors/src/aws_sdk/: dynamodb.rs  lambda.rs  mod.rs  s3.rs
agent/collectors/src/database/: mod.rs  nosql.rs  sql.rs
agent/collectors/src/http/: client.rs  mod.rs  server.rs
agent/collectors/src/system/: cpu.rs  memory.rs  mod.rs  network.rs  process.rs
agent/common/: Cargo.toml  compression.rs
agent/common/src/: lib.rs
agent/common/utils/: compression.rs  error_correction.rs
agent/core/lib/: Cargo.toml
agent/core/lib/src/: lib.rs
agent/core/lib/startup/: asm_opt.rs  lazy_init.rs  minimal_deps.rs  mod.rs  preload.rs
agent/core/lib/state/: cold_start.rs  memory_pool.rs  persistence.rs
agent/core/lib/telemetry/: metrics.rs
agent/core/lib/telemetry/protocol/: binary.rs  compact.rs  registry.rs
agent/core/lib/transport/: buffer.rs  retry.rs
agent/packaging/lambda-layer/scripts/: build-layer.sh
agent/telemetry/: Cargo.toml
agent/telemetry/protocol/: compact.rs
agent/telemetry/src/: buffer.rs  config.rs  lib.rs  manager.rs  pipeline.rs  processor.rs  registry.rs  transport.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/: app.css
frontend/src/components/service-map/: ServiceMap.svelte  index.ts  mockData.ts  shaders.ts  types-exports.ts  types.ts
frontend/src/components/state-viewer/: StateViewer.svelte  index.ts  types.ts
frontend/src/components/system-synthesis/: SystemSynthesis.svelte  index.ts  types.ts
frontend/src/components/timeline/: DebugControls.svelte  TimelineViewer.svelte  index.ts  types.ts
frontend/src/components/trace-viewer/: CausalInference.svelte  RootCauseAnalysis.svelte  TraceViewer.svelte  (+1 more)
frontend/src/routes/: +layout.svelte  +page.svelte
tools/scripts/: create-component.sh
tools/scripts/discovery/: README.md  discovery.go  go.mod  go.sum
tools/templates/component/: Cargo.toml.tmpl
(+21 files in other folders)
