[workspace]
members = [
    "agent/core/lib",
    "agent/common",
    "backend/api",
    "backend/ingestion",
    "backend/correlation",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
