[package]
name = "causal-telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
parking_lot = "0.12"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }

# Internal dependencies
agent-core = { path = "../core/lib" }
causal-collectors = { path = "../collectors" }

[features]
default = ["compression", "encryption"]
compression = []
encryption = []
minimal_deps = []