[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
once_cell = "1.18"
parking_lot = "0.12"
crc32fast = "1.3"
mimalloc = { version = "0.1", optional = true }
lambda_extension = { version = "0.10.0", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }

[features]
default = []
lambda = ["lambda_extension", "reqwest", "mimalloc"]
minimal_deps = []
lambda_extension = ["lambda"]
